<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:srcCompat="@drawable/bokeh_plant"
            android:id="@+id/bannerImage"
            app:srcCompat="@drawable/bokeh_plant"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/imageGuideline"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/imageGuideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.25041458"/>
    <TextView
            android:text="@string/bmi_main_mass_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/massTextFieldHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_sides"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_sides"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="@dimen/bmi_main_field_header_text_size" android:layout_marginTop="@dimen/bmi_marginTop_field_header"
            app:layout_constraintTop_toTopOf="@+id/imageGuideline"
            android:textAlignment="viewStart"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/massTextField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_sides"
            app:layout_constraintTop_toBottomOf="@+id/massTextFieldHeader"
            android:layout_marginEnd="@dimen/bmi_margin_sides" app:layout_constraintEnd_toEndOf="parent"
            android:maxLength="3"/>
    <TextView
            android:text="@string/bmi_main_height_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightTextFieldHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_sides"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_sides"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="@dimen/bmi_marginTop_field_header"
            app:layout_constraintTop_toBottomOf="@+id/massTextField" android:textSize="@dimen/bmi_main_field_header_text_size"
            android:textAlignment="textStart"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightTextField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_sides"
            android:layout_marginEnd="@dimen/bmi_margin_sides" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTextFieldHeader"
            android:maxLength="3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BMIResultNumber"
            android:textSize="@dimen/bmi_main_bmi_result_text_size"
            app:layout_constraintTop_toBottomOf="@+id/heightTextField"
            android:layout_marginStart="@dimen/bmi_margin_sides" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_sides" app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BMIResultType"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/BMIResultNumber"
            android:textSize="@dimen/bmi_main_bmi_type_text_size" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_sides"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_sides"
            android:textAlignment="center" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/countButton"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_info_details"
            android:id="@+id/infoButton"
            app:layout_constraintStart_toEndOf="@+id/BMIResultNumber"
            android:layout_marginStart="@dimen/bmi_margin_sides"
            android:layout_marginBottom="@dimen/bmi_marginBottom_infoButton"
            app:layout_constraintBottom_toTopOf="@+id/BMIResultType"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_sides"
            android:layout_marginTop="@dimen/bmi_marginTop_infoButton"
            app:layout_constraintTop_toBottomOf="@+id/heightTextField"
            app:layout_constraintHorizontal_bias="0.04" app:layout_constraintVertical_bias="0.818"
            android:visibility="invisible"
            android:onClick="onInfoButtonClick"/>
    <Button
            android:text="@string/bmi_main_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/countButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_sides"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_sides"
            android:textSize="@dimen/bmi_main_count_button_text_size" android:onClick="onCountButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/bmi_marginBottom_count_button" android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>